[package]
name = "moontime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
config = "0.13.4"
pretty_env_logger = "0.5.0"
rust-spice = { version = "0.7.8", features = ["lock"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["float_roundtrip", "arbitrary_precision"] }
warp = { version = "0.3.6" }
rustls = "0.22.2"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.24", features = ["native-tls-vendored"] }
openssl = { version = "^0.10.36", features = ["vendored"] }
lambda_runtime = "0.9.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
lambda_http = "0.9.2"
warp_lambda = "0.1.4"

