[package]
name = "moontime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rust-spice = { version = "0.7.8", features = ["lock"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["float_roundtrip", "arbitrary_precision"] }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
lambda_http = "0.9.2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[profile.release]
strip = true
lto = true
