[package]
name = "moontime"
version = "0.2.2"
edition = "2021"
authors = ["Joshua Vander Hook <hello@jodavaho.io>"]
description = "A simple cli and serverless NAIF SPICE lookup for a few space missions"
license = "MIT"
repository = "https://github.com/jodavaho/moontime"
homepage = "https://space.jodavaho.io"
hosted_at = "https://api.jodavaho.io/s"

[dependencies]
chrono = "0.4.31"
rust-spice = { version = "0.7.8", features = ["lock"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["float_roundtrip", "arbitrary_precision"] }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
lambda_http = "0.9.2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
time = { version = "0.3.34", features = ["serde-well-known"] }

[profile.release]
strip = true
lto = true

